parser/src/parser/expressions/snapshots/parser__parser__expressions__call_expr__tests__parse_call_generic_params_expr.snap
---
source: parser/src/parser/expressions/call_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 26)
  FN_DEF@[0; 26)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 26)
      BLOCK@[10; 26)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 24)
          CALL_EXPR@[11; 24)
            IDENT_EXPR@[11; 19)
              NAME@[11; 12)
                IDENT@[11; 12) "a"
              COLON_COLON@[12; 14) "::"
              TYPE_ARG_LIST@[14; 19)
                L_ANGLE@[14; 15) "<"
                IDENT_TYPE@[15; 18)
                  IDENT@[15; 18) "i32"
                R_ANGLE@[18; 19) ">"
            ARG_LIST@[19; 24)
              L_PAREN@[19; 20) "("
              IDENT_EXPR@[20; 21)
                NAME@[20; 21)
                  IDENT@[20; 21) "a"
              COMMA@[21; 22) ","
              IDENT_EXPR@[22; 23)
                NAME@[22; 23)
                  IDENT@[22; 23) "b"
              R_PAREN@[23; 24) ")"
        SEMI@[24; 25) ";"
        R_CURLY@[25; 26) "}"

