parser/src/parser/expressions/snapshots/parser__parser__expressions__call_expr__tests__parse_call_ife_with_args.snap
---
source: parser/src/parser/expressions/call_expr.rs
expression: "crate::utils::dump_debug(&parser_output)"
---
SOURCE_FILE@[0; 27)
  FN_DEF@[0; 27)
    FN_KW@[0; 2) "fn"
    WHITESPACE@[2; 3) " "
    NAME@[3; 7)
      IDENT@[3; 7) "main"
    PARAM_LIST@[7; 9)
      L_PAREN@[7; 8) "("
      R_PAREN@[8; 9) ")"
    WHITESPACE@[9; 10) " "
    BLOCK_EXPR@[10; 27)
      BLOCK@[10; 27)
        L_CURLY@[10; 11) "{"
        EXPR_STMT@[11; 25)
          CALL_EXPR@[11; 25)
            CALL_EXPR@[11; 18)
              IDENT_EXPR@[11; 12)
                NAME@[11; 12)
                  IDENT@[11; 12) "a"
              ARG_LIST@[12; 18)
                L_PAREN@[12; 13) "("
                IDENT_EXPR@[13; 14)
                  NAME@[13; 14)
                    IDENT@[13; 14) "a"
                COMMA@[14; 15) ","
                IDENT_EXPR@[15; 16)
                  NAME@[15; 16)
                    IDENT@[15; 16) "b"
                COMMA@[16; 17) ","
                R_PAREN@[17; 18) ")"
            ARG_LIST@[18; 25)
              L_PAREN@[18; 19) "("
              LITERAL@[19; 20)
                INT_NUMBER@[19; 20) "1"
              COMMA@[20; 21) ","
              LITERAL@[21; 22)
                INT_NUMBER@[21; 22) "2"
              COMMA@[22; 23) ","
              LITERAL@[23; 24)
                INT_NUMBER@[23; 24) "3"
              R_PAREN@[24; 25) ")"
        SEMI@[25; 26) ";"
        R_CURLY@[26; 27) "}"

